--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+.idea
+docs/_site
+xcuserdata
+*/xcuserdata/*
+.DS_Store
+*.xcuserdata*
+*xcworkspace/xcuserdata/*
+*.blend1
+*.kra-autosave.kra
+.DS_Store
+*.app.dSYM.zip
+build/
+*.xcuserdatad
+xcuserdata
+Pods/
+*.ipa
+*.xcuserstate
+*.xcworkspace/xcuserdata/*.xcuserdatad/
+*/*.xcodeproj/xcuserdata/
+fastlane/report.xml
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
